# iq

./: package-lock.json  package.json  vite.config.ts
.trae/rules/: project_rules.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  icon_cache.rs  icon_extractor.rs  lib.rs  main.rs  models.rs  storage.rs  utils.rs
src/components/: BatchFileProcessor.tsx  CategorySidebar.tsx  DragDropZone.tsx  ShortcutGrid.tsx  ShortcutItem.tsx
src/hooks/: useDragAndDrop.ts
src/services/: dataService.ts
src/types/: index.ts
