[package]
name = "ql"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ql_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rfd = "0.15"
lazy_static = "1.4"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-shell = "2.3.0"
tauri-plugin-sqlite = "0.1.1"
tauri-plugin-opener = "2.0.0"

# Windows specific dependencies for icon extraction
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "shellapi", "wingdi", "minwindef", "windef"] }
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_System_Com"] }

